5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4171/executions/1594_2425.log
== SUBMITION (2019-03-20 20:01:23) 
-- CODE:
d = int(input("Distancia percorrida:"))
cg = int(input("combustível gasto:"))

cm = (d/cg)

print(cm,"km/l)
-- EXECUTION TIME:
0.113203
-- ERROR:
  File "/home/codebench/codes/1594/2425/main.py", line 6
    print(cm,"km/l)
                  ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 20:01:24) 
-- CODE:
d = int(input("Distancia percorrida:"))
cg = int(input("combustível gasto:"))

cm = (d/cg)

print(cm,"km/l)
-- ERROR:
File "XXXX", line 6
    print(cm,"km/l)
                  ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 20:01:40) 
-- CODE:
d = (input("Distancia percorrida:"))
cg = int(input("combustível gasto:"))

cm = (d/cg)

print(cm,"km/l)
-- ERROR:
File "XXXX", line 6
    print(cm,"km/l)
                  ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 20:01:46) 
-- CODE:
d = (input("Distancia percorrida:"))
cg = int(input("combustível gasto:"))

cm = (d/cg)

print(cm,"km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    cm = (d/cg)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 20:01:54) 
-- CODE:
d = (input("Distancia percorrida:"))
cg = int(input("combustivel gasto:"))

cm = (d/cg)

print(cm,"km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    cm = (d/cg)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 20:02:06) 
-- CODE:
d = (input("Distancia percorrida:"))
cg = int(input("combustivel gasto:"))

cm = int( d / cg)

print(cm,"km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    cm = int( d / cg)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 20:02:18) 
-- CODE:
d = int(input("Distancia percorrida:"))
cg = int(input("combustivel gasto:"))

cm = int( d / cg)

print(cm,"km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d = int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 20:02:41) 
-- CODE:
d = int(input("Distancia percorrida:"))
cg = int(input("combustivel gasto:"))

cm = int( d / cg)

print(cm,km/l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d = int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 20:03:03) 
-- CODE:
d = int(input("Distancia percorrida:"))
cg = int(input("combustivel gasto:"))

cm = int( d / cg)

print(round(cm,3),"km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d = int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 20:03:20) 
-- CODE:
d = int(input("Distancia percorrida:"))
cg = float(input("combustivel gasto:"))

cm = int( d / cg)

print(round(cm,3),"km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d = int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 20:03:28) 
-- CODE:
d = float(input("Distancia percorrida:"))
cg = float(input("combustivel gasto:"))

cm = int( d / cg)

print(round(cm,3),"km/l")
-- OUTPUT:
14 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 20:03:35) 
-- CODE:
d = float(input("Distancia percorrida:"))
cg = float(input("combustivel gasto:"))

cm = float( d / cg)

print(round(cm,3),"km/l")
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 20:03:57) 
-- CODE:
d = float(input("Distancia percorrida:"))
cg = float(input("combustivel gasto:"))

cm = float( d / cg)

print(round(cm,4),"km/l")
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 20:04:04) 
-- CODE:
d = float(input("Distancia percorrida:"))
cg = float(input("combustivel gasto:"))

cm = float( d / cg)

print(round(cm,4),"km/l")
-- EXECUTION TIME:
0.121673
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 20:04:36) 
-- CODE:
d = float(input("Distancia percorrida:"))
cg = float(input("combustivel gasto:"))

cm = float( d / cg)

print(round(cm,3),"km/l")
-- EXECUTION TIME:
0.241619
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 20:04:41) 
-- CODE:
d = float(input("Distancia percorrida:"))
cg = float(input("combustivel gasto:"))

cm = float( d / cg)

print(round(cm,3),"km/l")
-- EXECUTION TIME:
0.133972
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
